zoom grader, new solid verson

--- a/board_scheduler/zoom_chat_analyzer.ipynb
+++ b/board_scheduler/zoom_chat_analyzer.ipynb
@@ -60,9 +60,8 @@
     "for dirname in file_list:\n",
     "    fname = folder_name + '/' + dirname + '/meeting_saved_chat.txt'\n",
     "    date = dirname.split(' ')[0]\n",
-    "    #print(date)\n",
     "    with open(fname, 'r', encoding='Utf8') as f:\n",
-    "        done = set()\n",
+    "        already_included = set()\n",
     "        for l in f: # Every row\n",
     "            #print(l.split(' : ')[0].split('From ')[1])            \n",
     "            name = re.findall(r\"From .+ : \", l)\n",
@@ -70,9 +69,9 @@
     "                name = name[0][5:-3].strip()\n",
     "                if 'Privately' in name:\n",
     "                    name = name.split(' to ')[0].strip()            \n",
-    "                if name not in done:\n",
+    "                if name not in already_included:\n",
     "                    #print(name)\n",
-    "                    done |= {name}\n",
+    "                    already_included |= {name}\n",
     "                    df = df.append({'date':date, 'name':name}, ignore_index=True)"
    ]
   },
@@ -82,7 +81,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Total different names:', len(set(df.name.tolist())))"
+    "print('Total different names:', len(df.name.unique()))\n",
+    "print(f\"Total different meetings: {len(df.date.unique())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.query(\"name=='Arseny Khakhalin'\")"
    ]
   },
   {
@@ -92,21 +101,35 @@
    "outputs": [],
    "source": [
     "df2 = (df\n",
-    " .groupby('name')\n",
-    " .agg({'date': 'count'})\n",
-    " .reset_index()\n",
-    " .rename({'date':'number'}, axis=1)\n",
-    " .sort_values(by='number', ascending=False)\n",
-    " .groupby('number')\n",
-    " .agg({'name': lambda x: ', '.join(x)}) \n",
-    " .sort_values('number', ascending=False)\n",
-    " .reset_index()\n",
+    "       .groupby(['date','name']) # Some days have more than one log\n",
+    "       .agg('first')\n",
+    "       .reset_index()\n",
+    "       .groupby('name')\n",
+    "       .agg({'date': 'count'})\n",
+    "       .reset_index()\n",
+    "       .rename({'date':'number'}, axis=1)\n",
+    "       .sort_values(by='number', ascending=False)\n",
     ")\n",
     "\n",
-    "df2\n",
+    "df3 = (df2\n",
+    "       .groupby('number')\n",
+    "       .agg({'name': lambda x: ', '.join(x)}) \n",
+    "       .sort_values('number', ascending=False)\n",
+    "       .reset_index()\n",
+    "      )\n",
     "\n",
-    "for i in range(df2.shape[0]):\n",
-    "    print(df2.loc[i, 'number'], ':', df2.loc[i, 'name'])"
+    "for i in range(df3.shape[0]):\n",
+    "    print(df3.loc[i, 'number'], ':', df3.loc[i, 'name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save data\n",
+    "df2.to_csv('../../data/attendance/zoom_chats.csv', index=False)"
    ]
   }
  ],
