--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -10,36 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Recently identified complicatoins\n",
-    "\n",
-    "Unlike in Neuro class, some people in biosem didn't put their emails on zoom, or only did it late."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plan:\n",
-    "\n",
-    "1. Load data from BIP\n",
-    "1. Process Zoom logs, ignore repetitions, summarize\n",
-    "1. Filter only one class\n",
-    "1. Read the actual list of students (separate for every class)\n",
-    "1. Use a substitutition table \"name --> email\" (separate file, one for all classes) to either substitute entries, or disable entries (special \"command\" for making it ignore an entry)\n",
-    "1. Using email as id, connect two databases. Output summary, as well as a list of failed entries (present on Zoom, but absent on BIP).\n",
-    "\n",
-    "Piazza grader:\n",
-    "\n",
-    "1. Load a list of Piazza people\n",
-    "2. Go through saved Piazza contributions, tabulate participation\n",
-    "3. Read attendance summary from part 1 (above)\n",
-    "4. Output a full table (screen & csv)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,7 +28,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_name = '../../data/attendance/'"
+    "folder_name = '../../data/attendance/'\n",
+    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
+    "chat_mask = 'Neuroscience'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 1. Zoom logs"
    ]
   },
   {
@@ -95,6 +74,11 @@
     "    data['Meeting'] = name\n",
     "    data['User Email'] = data['User Email'].fillna('none') # NaNs are ignored by aggregation below\n",
     "    \n",
+    "    # Join Time\tLeave Time\tDuration (Minutes)\n",
+    "    if 'Join Time' in data.columns:  # Wrong output format - it is sometimes unavoidable\n",
+    "        data['Total Duration (Minutes)'] = data['Duration (Minutes)']\n",
+    "        data = data.drop(columns=['Join Time', 'Leave Time', 'Duration (Minutes)'])\n",
+    "    \n",
     "    df = df.append(data, ignore_index=True)\n",
     "\n",
     "print('Meeting files:', len(processed_set))"
@@ -127,16 +111,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inexplicably, some total participation counts are stored as strings, not numbers\n",
-    "# So correct that.\n",
+    "# Inexplicably, some total participation counts are stored as strings, not numbers. Correct that.\n",
     "\n",
-    "df.loc[df.minutes=='Yes'] = 0 # No idea what it means, but Zoom outputed it!!!\n",
-    "ind = [type(a)!=int for a in df.minutes.values]\n",
-    "df.loc[ind, 'minutes'] = [int(a) for a in df.loc[ind].minutes.values]\n",
+    "df.loc[df.minutes=='Yes'] = 0 # No idea what it means, but Zoom outputed it!\n",
+    "df.minutes = df.minutes.astype(int)\n",
     "df = df[df.minutes>0]  # Remove weird empty entries\n",
     "\n",
-    "# df['check'] = 1*(df.minutes>40) # Simple attendance\n",
-    "df['check'] = 0.3*(df.minutes>30) + 0.7*(df.minutes>50) # Full attendance and late classes"
+    "# Full attendance and late classes:\n",
+    "df['check'] = 0.3*(df.minutes>30) + (1-0.3)*(df.minutes>50)"
    ]
   },
   {
@@ -156,13 +138,14 @@
    "outputs": [],
    "source": [
     "# Participation length histogram\n",
-    "plt.figure(figsize=(10,3))\n",
-    "plt.subplot(121)\n",
-    "plt.hist(df.loc[df.meeting=='Biosem'].minutes.values, bins=50);\n",
-    "plt.title('Biosem');\n",
-    "plt.subplot(122)\n",
-    "plt.hist(df.loc[df.meeting=='Neuro'].minutes.values, bins=50);\n",
-    "plt.title('Neuro');"
+    "if False:\n",
+    "    plt.figure(figsize=(10,3))\n",
+    "    plt.subplot(121)\n",
+    "    plt.hist(df.loc[df.meeting=='Biosem'].minutes.values, bins=50);\n",
+    "    plt.title('Biosem');\n",
+    "    plt.subplot(122)\n",
+    "    plt.hist(df.loc[df.meeting=='Neuro'].minutes.values, bins=50);\n",
+    "    plt.title('Neuro');"
    ]
   },
   {
@@ -172,25 +155,7 @@
    "outputs": [],
    "source": [
     "# Only analyze one type of meetings starting from here\n",
-    "\n",
-    "target_meeting = 'Neuro' # Options: {'Biosem', 'Comput', 'Neuro'}\n",
     "df = df[df.meeting==target_meeting]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check individual records of needed\n",
-    "token = 'Ell'\n",
-    "all_meetings = df.groupby('date').agg({'name':'count'}).reset_index()\n",
-    "partial = df.loc[df.name.str.match(token)]\n",
-    "out = all_meetings[['date']].merge(partial, on='date', how='left')[['date','name','email','minutes','check']]\n",
-    "out.loc[out.check.isna(),'check'] = 0\n",
-    "print(sum(out.check))\n",
-    "out"
    ]
   },
   {
@@ -289,10 +254,21 @@
     "           .drop(columns='name_r')           \n",
     "           .query('id.isna()', engine='python') # Only keep unrecognized users\n",
     "          )\n",
-    "print('Rows found:', len(df_lost.id))\n",
-    "#print('\\n'.join([a for a in df_lost['name'] + ',' + df_lost['email']])) # Output csv\n",
+    "print('Unrecognized emails (uncomment to see the list):', len(df_lost.id))\n",
     "\n",
-    "#df_lost # Output nice human-readable form"
+    "# Output nice human-readable form:\n",
+    "# df_lost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Real name searher:\n",
+    "token='Stef'\n",
+    "df_fixed.query('name.notna()', engine='python').query('name.str.match(@token)', engine='python')"
    ]
   },
   {
@@ -305,10 +281,7 @@
     "df_fixed = (df_fixed\n",
     "            .merge(people, on='email', how='left', suffixes=['_l', '']) # This time keep official names only\n",
     "            .drop(columns=['name_l', 'id', 'Guest'])\n",
-    "#            .query('name.notna()', engine='python') # Drop people who are not on bip\n",
-    "           )\n",
-    "\n",
-    "df_fixed"
+    "           )"
    ]
   },
   {
@@ -325,25 +298,7 @@
     "       .reset_index()\n",
     "      )\n",
     "\n",
-    "# dfs.sort_values(by='check')\n",
     "# dfs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# **Troubleshooter**: for a given student, find all meetings they did and did not attend.\n",
-    "\n",
-    "df_meetings = pd.DataFrame({'date': [a for a in set(df_fixed['date'].values)]})\n",
-    "token = 'yyy'\n",
-    "out = (df_meetings\n",
-    "       .merge(df_fixed.loc[df_fixed.name.str[:len(token)] == token], on='date', how='left')\n",
-    "       .sort_values(by='date')\n",
-    "       .query('minutes.notna()', engine='python'))\n",
-    "out"
    ]
   },
   {
@@ -422,21 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look at one student\n",
-    "\n",
-    "q = df_piazza[df_piazza.name.str.match('John')]\n",
-    "q\n",
-    "\n",
-    "#for i in range(q.shape[0]):\n",
-    "#    print(q.message.iloc[i], end='\\n---------\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Now summarize, then merge left on the full list of people\n",
     "\n",
     "df_piazza['good'] = df_piazza.grade.str.match('good')\n",
@@ -461,13 +401,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zoom chats\n",
+    "\n",
+    "(We assume that they were pre-computed by the `zoom_chat_analyzer` notebook.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One student\n",
-    "dfsp[dfsp.name.str.match('John')]"
+    "df_chats = pd.read_csv(folder_name + 'zoom_chats.csv')\n",
+    "total_meetings = df_chats.number.max()\n",
+    "df_chats = df_chats.query(\"name != 'Arseny Khakhalin'\")\n",
+    "\n",
+    "def find_percentile(x, data):\n",
+    "    return sum(np.array(data)>=x)/len(data)\n",
+    "\n",
+    "df_chats['percentile'] = [find_percentile(x, df_chats.number.values) for x in df_chats.number]\n",
+    "df_chats.percentile = np.round(df_chats.percentile*100).astype(int)\n",
+    "df_chats.columns = ['name_zoom', 'n_chats', 'percentile_chats']\n",
+    "# df_chats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final summary grading"
    ]
   },
   {
@@ -480,7 +445,14 @@
    "source": [
     "# Full output\n",
     "\n",
-    "df_full = dfsp.merge(dfs, on='email', suffixes=['_piazza','_zoom'])\n",
+    "df_full = (dfsp\n",
+    "           .merge(dfs, on='email', suffixes=['_piazza','_zoom'])\n",
+    "           .merge(df_chats, on='name_zoom', how='left')           \n",
+    "          )\n",
+    "df_full.n_chats = df_full.n_chats.fillna(0).astype(int)\n",
+    "df_full.percentile_chats = df_full.percentile_chats.fillna(100).astype(int)\n",
+    "\n",
+    "# Show the full giant thing:\n",
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
     "    # print(df_full)\n",
     "    pass"
@@ -507,14 +479,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# At-risk students\n",
-    "\n",
-    "classes_so_far = 17\n",
-    "works_so_far = 10\n",
-    "df_at_risk = df_full.query('total-bad < @works_so_far-1 | check < @classes_so_far-3')\n",
-    "\n",
-    "# print(','.join([e for e in df_at_risk.email]))\n",
-    "#df_at_risk"
+    "# Constants\n",
+    "classes_so_far = 23\n",
+    "works_so_far = 13"
    ]
   },
   {
@@ -524,15 +491,65 @@
    "outputs": [],
    "source": [
     "# Grades\n",
+    "#                 0    1     2    3     4     5    6\n",
+    "grade_letters = ['F', 'C', 'B-', 'B', 'B+', 'A-', 'A']\n",
     "\n",
-    "df_full['grade'] = 'B'\n",
-    "df_full.grade = df_full.grade.where(~(df_full.check < classes_so_far-3), 'C')\n",
-    "df_full.grade = df_full.grade.where(~(df_full.check < classes_so_far-6), 'F')\n",
-    "df_full.grade = df_full.grade.where(~(df_full.total < works_so_far-2), 'C')\n",
-    "df_full.grade = df_full.grade.where(~(df_full.total < works_so_far-4), 'F')\n",
-    "df_full.grade = df_full.grade.where(~((df_full.good > 2) & (df_full.grade=='B')), 'A')\n",
-    "df_full.grade = df_full.grade.where(~((df_full.good > 1) & (df_full.grade=='B')), 'B+')\n",
-    "#df_full.head(200)"
+    "df_full['grade'] = 3\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.9)), 1)\n",
+    "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.8)), 0)\n",
+    "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.9)), 1)\n",
+    "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.8)), 0)\n",
+    "df_full.loc[(df_full.good >= 2), 'grade'] += 1\n",
+    "df_full.loc[(df_full.good >= 5), 'grade'] += 1\n",
+    "df_full.loc[(df_full.percentile_chats <= 20), 'grade'] += 1\n",
+    "df_full.grade = np.minimum(5, df_full.grade)\n",
+    "# Translate to letters:\n",
+    "df_full.grade = [grade_letters[i] for i in df_full.grade]\n",
+    "\n",
+    "df_full.head(200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyze one student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check individual records of needed\n",
+    "token = 'Stef'\n",
+    "\n",
+    "# Full attendance:\n",
+    "all_meetings = df.groupby('date').agg({'name':'count'}).reset_index()\n",
+    "partial = df.loc[df.name.str.match(token)]\n",
+    "out = all_meetings[['date']].merge(partial, on='date', how='left')[['date','name','email','minutes','check']]\n",
+    "out.loc[out.check.isna(),'check'] = 0\n",
+    "print(sum(out.check))\n",
+    "\n",
+    "#out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All homeworks:\n",
+    "dfsp[dfsp.name.str.match(token)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mid-term letters"
    ]
   },
   {
@@ -565,13 +582,20 @@
     "        return ' '.join([c for c in s.split(' ') if c])\n",
     "    \n",
     "    print(f\"Dear {sec.name_piazza.split()[0]},\")\n",
+    "    print(f\"based on my records up to {max(df.date)}\")\n",
     "    print(f\"you have attended {np.round(sec.check).astype(int)} classes \", end='')\n",
     "    print(f\"(out of {classes_so_far} that we had so far), \")\n",
     "    print(f\"and submitted {sec.total} homeworks (out of {works_so_far} that we had)\")   \n",
     "    if sec.good>0:\n",
     "        print(f\"{sec.good} of these homeworks were really good!! (and others were also fine :)\")\n",
     "    if sec.total < works_so_far:\n",
-    "        print(f\"(Works that are missing: {'; '.join(missing_work)})\")\n",
+    "        print(f\"\\n(Works that are missing: {'; '.join(missing_work)})\\n\")\n",
+    "    print(f\"You were active in {sec.n_chats} class sessions\", end='')\n",
+    "    if sec.percentile_chats<50:\n",
+    "        print(f\", which places you in the top {sec.percentile_chats}%\", end='')\n",
+    "    else:\n",
+    "        print(f\", which places you in the bottom {100-sec.percentile_chats}%\", end='')\n",
+    "    print(\" in terms of class participation.\")\n",
     "    print(f\"With this in mind, your current technically projected grade is {sec.grade}\")\n",
     "    if sec.total < works_so_far:\n",
     "        message = \"\"\"If you want to improve, you can submit missing homeworks. \n",
@@ -581,7 +605,11 @@
     "              'What is the most interesting thing that you learned that week, and what makes it interesting to you?''. \n",
     "              I would expect about a paragraph of text, with explicit references to what you learned from \n",
     "              videos and readings, and to what we discussed in class. Additional sources are also welcome!\"\"\"\n",
-    "        print(remove_double_spaces(message))"
+    "        print('\\n'+remove_double_spaces(message))\n",
+    "    print(\"\\n(And if anything about this summary does not ring right to you, please let me know, \" \\\n",
+    "          \"and I'll double-check my records!)\")\n",
+    "        \n",
+    "response(df_full, df_piazza, 5)"
    ]
   },
   {
@@ -590,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = np.where(df_full.name_piazza.str.match('Ell'))[0][0]\n",
+    "i = np.where(df_full.name_piazza.str.match('Jud'))[0][0]\n",
     "response(df_full, df_piazza, i)"
    ]
   },
@@ -602,7 +630,7 @@
    "source": [
     "for i in range(df_full.shape[0]):\n",
     "    response(df_full, df_piazza, i)\n",
-    "    print(\"\\n\")"
+    "    print(\"\\n\\n\")"
    ]
   },
   {
