working on board scheduler

--- a/board_scheduler/scheduler_pandas.ipynb
+++ b/board_scheduler/scheduler_pandas.ipynb
@@ -6,23 +6,27 @@
    "source": [
     "## Sproj Board Scheduler, Spring 2021\n",
     "\n",
+    "New version, Pandas-based\n",
+    "\n",
     "A script that to read faculty and students availability for the boards week, and schedule all boards, accounting for their target composition, and student availability.\n",
     "\n",
     "All of the data used by this script is sensitive, and so has to be stored outside of git.\n",
     "\n",
-    "In this version:\n",
+    "Data sources:\n",
     "* Student availability comes from BIP (schedules for all majors, downloaded as one report, saved to pdf by Craig, then from pdf to txt by me)\n",
-    "* Faculty availability comes from an Excel-like table, weirdly transformed"
+    "* Faculty availability comes from an csv file, indicating times when their availability switches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import time\n",
     "import datetime\n",
     "import copy\n",
@@ -31,118 +35,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set constants and prepare time slots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "hideNames = 0 # set 0 for troubleshooting, set 1 before githubbing\n",
-    "folder_name = '../../data/boards2021s/' # Update as necessary"
+    "\n",
+    "folder_name = '../../data/boards2021s/' # Update as necessary\n",
+    "days = ['May-5-2021', 'May-6-2021', 'May-7-2021', 'May-10-2021', 'May-11-2021']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare time axis for the availability matrix\n",
+    "temp = []\n",
+    "for day in days:\n",
+    "    for hour in [8,9,10,11, 13,14,15,16,17]:\n",
+    "        stamp = day + ' ' + str(hour) + ':00'\n",
+    "        temp.append(pd.to_datetime(stamp))\n",
+    "df_avail = pd.DataFrame({'slot':temp})\n",
+    "#df_avail.head(20)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase 1: Load and parse the data"
+    "# Load the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>email</th>\n",
-       "      <th>sproj_advisor</th>\n",
-       "      <th>member2</th>\n",
-       "      <th>member3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Ahearn, Cillian</td>\n",
-       "      <td>ca9894@bard.edu</td>\n",
-       "      <td>Bruce</td>\n",
-       "      <td>Arseny</td>\n",
-       "      <td>Cathy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bach, Liam</td>\n",
-       "      <td>lb6988@bard.edu</td>\n",
-       "      <td>Arseny</td>\n",
-       "      <td>Brude</td>\n",
-       "      <td>Frank</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Beneroff, Ethan</td>\n",
-       "      <td>eb5377@bard.edu</td>\n",
-       "      <td>Bruce</td>\n",
-       "      <td>Cathy</td>\n",
-       "      <td>Arseny</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Benincasa, Christopher</td>\n",
-       "      <td>cb8387@bard.edu</td>\n",
-       "      <td>Gabriel</td>\n",
-       "      <td>Kerri-Ann</td>\n",
-       "      <td>Eli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Blanco, Stephanie</td>\n",
-       "      <td>sb6406@bard.edu</td>\n",
-       "      <td>Mike</td>\n",
-       "      <td>Brooke</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     name            email sproj_advisor    member2 member3\n",
-       "0         Ahearn, Cillian  ca9894@bard.edu         Bruce     Arseny   Cathy\n",
-       "1              Bach, Liam  lb6988@bard.edu        Arseny      Brude   Frank\n",
-       "2         Beneroff, Ethan  eb5377@bard.edu         Bruce      Cathy  Arseny\n",
-       "3  Benincasa, Christopher  cb8387@bard.edu       Gabriel  Kerri-Ann     Eli\n",
-       "4       Blanco, Stephanie  sb6406@bard.edu          Mike     Brooke     NaN"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Senior boards\n",
     "composition = pd.read_csv(folder_name + 'senior_boards.csv') # Board composition\n",
-    "composition.head(5)"
+    "composition.head(5)\n",
+    "\n",
+    "faculty_names = (composition['advisor']\n",
+    "                 .append(composition['member2'])\n",
+    "                 .append(composition['member3'])                                  \n",
+    "                 .dropna()\n",
+    "                 .unique()\n",
+    "                 .tolist()\n",
+    "                )\n",
+    "print(' '.join(faculty_names))\n",
+    "\n",
+    "for i in range(composition.shape[0]):    \n",
+    "    # Remove comma and put first name first, and last name - last\n",
+    "    composition.loc[i,'student'] = ' '.join(composition.loc[i,'student'].split(', ')[::-1])\n",
+    "    \n",
+    "#composition"
    ]
   },
   {
@@ -151,9 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "faculty_names = composition['Advisor'].append(composition['Board2']).append(composition['Board3']).unique().tolist()\n",
-    "faculty_names = [s for s in faculty_names if type(s)==type(':)')] # Remove nans (they are float)\n",
-    "print(faculty_names)"
+    "# Read the official faculty list and create columns\n",
+    "df_fac = pd.read_csv(folder_name + 'faculty.csv')\n",
+    "for i in range(df_fac.shape[0]):\n",
+    "    ser = df_fac.iloc[i]\n",
+    "    df_avail[ser.email] = True  "
    ]
   },
   {
@@ -162,39 +121,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Faculty availability\n",
-    "temp = pd.read_csv('../../data/boards2020f/faculty.csv')\n",
-    "translation = {'Mike':'Tibbetts', 'Arseny':'Khakhalin', 'Gabriel':'Perron', 'Brooke Jude':'Jude',\n",
-    "              'Katie Tabb':'Tabb', 'Eli':'Dueker', 'Heather':'Bennett', 'Frank':'Scalzo',\n",
-    "              'Kerri-Ann Norton':'Norton', 'Bruce Robertson':'Robertson', 'Cathy':'Collins'}\n",
-    "avail_faculty = pd.melt(temp, id_vars=['Time'], var_name='faculty', value_name='can_do')\n",
-    "for key,value in translation.items():\n",
-    "    ind = (avail_faculty['faculty']==key)\n",
-    "    avail_faculty.loc[ind, 'faculty'] = value\n",
-    "print(avail_faculty['faculty'].unique())\n",
+    "# Read and process faculty availability\n",
+    "table = pd.read_csv(folder_name + 'faculty_availability.csv')\n",
+    "for i in range(table.shape[0]):\n",
+    "    if table.loc[i,'flag']=='in':\n",
+    "        continue\n",
+    "    start = pd.to_datetime(table.loc[i,'day'] + ' ' + table.loc[i,'time'])\n",
+    "    if (i == table.shape[0]-1 or \n",
+    "        table.loc[i, 'name'] != table.loc[i+1, 'name'] or\n",
+    "        table.loc[i, 'day'] != table.loc[i+1, 'day']):\n",
+    "        end = pd.to_datetime(table.loc[i,'day'] + ' ' + '11p')\n",
+    "    else:\n",
+    "        end = pd.to_datetime(table.loc[i,'day'] + ' ' + table.loc[i+1,'time'])\n",
+    "    name = table.loc[i, 'name']\n",
+    "    email = df_fac.query(\"first==@name\").email.values[0]\n",
+    "    # print(email, start, end)\n",
+    "    ind = (df_avail.slot >= start) & (df_avail.slot < end)\n",
+    "    df_avail.loc[ind, email] = False\n",
+    "    \n",
+    "def plot_avail(df):\n",
+    "    plt.imshow(df_avail.iloc[:,1:].values.T*1, cmap='gray')\n",
     "\n",
-    "avail_faculty = avail_faculty.rename({'Time':'time'}, axis=1)\n",
-    "avail_faculty['time'] = pd.to_datetime(avail_faculty.time)\n",
-    "dayletters = ['m','t','w','r','f','s','s']\n",
-    "avail_faculty['day'] = pd.to_datetime(avail_faculty.time).dt.weekday.map(lambda i: dayletters[i])\n",
-    "avail_faculty['minute'] = pd.to_datetime(avail_faculty.time).dt.minute\n",
-    "avail_faculty['hour'] = pd.to_datetime(avail_faculty.time).dt.hour\n",
-    "avail_faculty.loc[avail_faculty['can_do']=='YES', 'can_do'] = True\n",
-    "avail_faculty.loc[avail_faculty['can_do']=='NO', 'can_do'] = False\n",
-    "\n",
-    "# Executive decisions <----------------------------- may be a stretch\n",
-    "do_drop_30 = True # Drop all 30-min slots\n",
-    "if do_drop_30:\n",
-    "    for i in range(avail_faculty.shape[0]):\n",
-    "        # Slow but should work. If 2nd half of the hour is taken, the entire hour is taken.\n",
-    "        if avail_faculty.loc[i,'minute']==30:\n",
-    "            avail_faculty.loc[i,'can_do'] = avail_faculty.loc[i-1,'can_do']\n",
-    "    avail_faculty = avail_faculty[avail_faculty['minute']==0].drop(columns=['minute'])\n",
-    "\n",
-    "    # Only look at the first week\n",
-    "avail_faculty = avail_faculty[avail_faculty['time'] < avail_faculty.loc[0,'time'] + pd.DateOffset(days=7)]\n",
-    "\n",
-    "avail_faculty"
+    "plot_avail(df_avail)"
    ]
   },
   {
@@ -203,34 +151,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Student schedule\n",
-    "altnames = pd.read_csv('../../data/boards2020f/altnames.csv')\n",
+    "# Read and process student availability\n",
+    "altnames = pd.read_csv(folder_name + 'altnames.csv')\n",
     "schedule = pd.DataFrame(columns=['name', 'day', 'start', 'finish'])\n",
     "dayletters = {'M','T','W','Th','F'}\n",
-    "with open('../../data/boards2020f/student_schedules.txt', 'r') as file:    \n",
+    "with open(folder_name + 'student_schedules.txt', 'r') as file:    \n",
     "    current_student = ''\n",
-    "    istudent = 0\n",
     "    while True:\n",
-    "        line = file.readline()\n",
+    "        line = file.readline()        \n",
     "        if not line:\n",
     "            break\n",
+    "        if len(line)<3: # Empty line\n",
+    "            continue\n",
     "        s = line.split(' ')\n",
     "        if s[0]=='Student:':\n",
     "            lim = [i for i in range(len(s)) if s[i]=='--'][0] # Find where the name ends\n",
     "            name = ' '.join(s[1:lim])\n",
     "            if name in altnames.oldname.values:\n",
-    "                name = altnames.loc[altnames.oldname==name, 'name'].values[0]            \n",
-    "            current_student = name            \n",
-    "            if current_student in composition.Student.tolist():\n",
-    "                istudent += 1\n",
-    "                print(istudent, end=' ')\n",
+    "                name = altnames.loc[altnames.oldname==name, 'name'].values[0]                        \n",
+    "            current_student = name\n",
+    "            print('.', end='')\n",
     "        else: # Course\n",
     "            days = []\n",
     "            is_left_time = True\n",
-    "            s = line.replace('-',' ').split(' ') # To avoid problems with pm/am format they use\n",
-    "            if s[0] not in dayletters:\n",
-    "                program = s[0] # Like BIO or CHEM\n",
-    "                course_n = s[1] # Number in the course name, like 101 or whatever\n",
+    "            s = line.replace('-',' ').split(' ') # To avoid problems with pm/am format they use            \n",
+    "            if s[0] not in dayletters: # If it's a couse row, and not just a time row\n",
+    "                program = s[0] # Program code, like BIO or CHEM\n",
+    "                course_n = s[1] # Number in the course name, like 101 or something\n",
     "            for ci in range(len(s)):\n",
     "                c = s[ci]\n",
     "                if c in dayletters: # Day of the week\n",
@@ -240,7 +187,7 @@
     "                        left_time = s[ci-1]+' '+c\n",
     "                        is_left_time = False                        \n",
     "                    else:\n",
-    "                        right_time = s[ci-1]+' '+c\n",
+    "                        right_time = s[ci-1]+' '+c            \n",
     "            for day in days:\n",
     "                schedule = schedule.append({'name':current_student, 'day':day, \n",
     "                                            'program':program, 'course_n':course_n,\n",
@@ -254,29 +201,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule.columns.tolist()\n",
-    "# schedule"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test individual students\n",
-    "#schedule[schedule.name.str[:3]==\"Sac\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Missed students\n",
-    "student_list = [s for s in composition.Student.values if s not in schedule.name.values]\n",
-    "# student_list"
+    "student_list = [s for s in composition.student.values if s not in schedule.name.values]\n",
+    "print('Missing students:', student_list)"
    ]
   },
   {
