--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -499,9 +499,9 @@
     "df_full.grade = df_full.grade.where(~(df_full.check < np.round(classes_so_far*0.8)), 0)\n",
     "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.9)), 1)\n",
     "df_full.grade = df_full.grade.where(~(df_full.total < np.round(works_so_far*0.8)), 0)\n",
-    "df_full.loc[(df_full.good >= 2), 'grade'] += 1\n",
-    "df_full.loc[(df_full.good >= 5), 'grade'] += 1\n",
-    "df_full.loc[(df_full.percentile_chats <= 20), 'grade'] += 1\n",
+    "df_full.loc[(df_full.good >= 3) & (df_full.grade >= 1), 'grade'] += 1\n",
+    "df_full.loc[(df_full.good >= 6) & (df_full.grade >= 1), 'grade'] += 1\n",
+    "df_full.loc[(df_full.percentile_chats <= 20) & (df_full.grade >= 1), 'grade'] += 1\n",
     "df_full.grade = np.minimum(5, df_full.grade)\n",
     "# Translate to letters:\n",
     "df_full.grade = [grade_letters[i] for i in df_full.grade]\n",
@@ -523,16 +523,16 @@
    "outputs": [],
    "source": [
     "# Check individual records of needed\n",
-    "token = 'Stef'\n",
+    "token = 'Megi'\n",
     "\n",
     "# Full attendance:\n",
     "all_meetings = df.groupby('date').agg({'name':'count'}).reset_index()\n",
-    "partial = df.loc[df.name.str.match(token)]\n",
+    "partial = df.loc[df.name.str.contains(token)]\n",
     "out = all_meetings[['date']].merge(partial, on='date', how='left')[['date','name','email','minutes','check']]\n",
     "out.loc[out.check.isna(),'check'] = 0\n",
     "print(sum(out.check))\n",
     "\n",
-    "#out"
+    "out"
    ]
   },
   {
@@ -542,7 +542,7 @@
    "outputs": [],
    "source": [
     "# All homeworks:\n",
-    "dfsp[dfsp.name.str.match(token)]"
+    "df_piazza[df_piazza.name.str.contains(token)]"
    ]
   },
   {
@@ -564,31 +564,36 @@
     "    sec = df_full.iloc[i]\n",
     "    name = sec.name_piazza\n",
     "    \n",
-    "    missing_work = (df_piazza\n",
-    "                  .groupby(['work', 'name'])\n",
-    "                  .agg({'message':'count'})\n",
-    "                  .reset_index()\n",
-    "                  .pivot_table(index='work', columns='name', values='message')\n",
-    "                  .reset_index()\n",
-    "                  [['work', name]]\n",
-    "                  .set_axis(['work', 'name'], axis=1, inplace=False)\n",
-    "                  .query('name.isna()', engine='python')\n",
-    "                  .work\n",
-    "                  .tolist()\n",
-    "                 )\n",
+    "    flag_submitted_something = False\n",
+    "    if name in df_piazza.name.unique():\n",
+    "        flag_submitted_something = True\n",
+    "        missing_work = (df_piazza\n",
+    "                        .groupby(['work', 'name'])\n",
+    "                        .agg({'message':'count'})\n",
+    "                        .reset_index()\n",
+    "                        .pivot_table(index='work', columns='name', values='message')\n",
+    "                        .reset_index()\n",
+    "                        [['work', name]]\n",
+    "                        .set_axis(['work', 'name'], axis=1, inplace=False)\n",
+    "                        .query('name.isna()', engine='python')\n",
+    "                        .work\n",
+    "                        .sort_values()\n",
+    "                        .tolist()\n",
+    "                     )\n",
     "    \n",
     "    def remove_double_spaces(s):\n",
     "        s = s.replace('\\n', ' ')\n",
     "        return ' '.join([c for c in s.split(' ') if c])\n",
     "    \n",
+    "    print(f\"{sec.name_zoom} {sec.email}:\")\n",
     "    print(f\"Dear {sec.name_piazza.split()[0]},\")\n",
-    "    print(f\"based on my records up to {max(df.date)}\")\n",
+    "    print(f\"based on my records as of {max(df.date)}\")\n",
     "    print(f\"you have attended {np.round(sec.check).astype(int)} classes \", end='')\n",
     "    print(f\"(out of {classes_so_far} that we had so far), \")\n",
     "    print(f\"and submitted {sec.total} homeworks (out of {works_so_far} that we had)\")   \n",
     "    if sec.good>0:\n",
     "        print(f\"{sec.good} of these homeworks were really good!! (and others were also fine :)\")\n",
-    "    if sec.total < works_so_far:\n",
+    "    if sec.total < works_so_far and flag_submitted_something:\n",
     "        print(f\"\\n(Works that are missing: {'; '.join(missing_work)})\\n\")\n",
     "    print(f\"You were active in {sec.n_chats} class sessions\", end='')\n",
     "    if sec.percentile_chats<50:\n",
@@ -596,20 +601,25 @@
     "    else:\n",
     "        print(f\", which places you in the bottom {100-sec.percentile_chats}%\", end='')\n",
     "    print(\" in terms of class participation.\")\n",
-    "    print(f\"With this in mind, your current technically projected grade is {sec.grade}\")\n",
-    "    if sec.total < works_so_far:\n",
+    "    \n",
+    "    print(f\"Taking all of it into account, your current automatically projected grade is \", end='')\n",
+    "    if sec.grade=='B': print('between B and B+')\n",
+    "    elif sec.grade=='B+': print('between B+ and A-')        \n",
+    "    else: print(sec.grade)\n",
+    "    \n",
+    "    if sec.grade in {'F', 'C'}:\n",
     "        message = \"\"\"If you want to improve, you can submit missing homeworks. \n",
     "              For missed lab work, just do the lab, and submit your work, as described in the assignment. \n",
     "              For missed questions, at this point the assignment is a bit different.\n",
     "              You will need to answer the following question: \n",
-    "              'What is the most interesting thing that you learned that week, and what makes it interesting to you?''. \n",
+    "              'What is the most interesting thing that you learned that week, and what makes it interesting for you?'. \n",
     "              I would expect about a paragraph of text, with explicit references to what you learned from \n",
-    "              videos and readings, and to what we discussed in class. Additional sources are also welcome!\"\"\"\n",
+    "              home assignments, and from our class discussions. Additional sources are also welcome!\"\"\"\n",
     "        print('\\n'+remove_double_spaces(message))\n",
-    "    print(\"\\n(And if anything about this summary does not ring right to you, please let me know, \" \\\n",
+    "    print(\"\\n(If anything about this summary does not ring right to you, please email me, \" \\\n",
     "          \"and I'll double-check my records!)\")\n",
     "        \n",
-    "response(df_full, df_piazza, 5)"
+    "response(df_full, df_piazza, 12)"
    ]
   },
   {
@@ -618,14 +628,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = np.where(df_full.name_piazza.str.match('Jud'))[0][0]\n",
+    "i = np.where(df_full.name_piazza.str.match('Ste'))[0][0]\n",
+    "print(i)\n",
     "response(df_full, df_piazza, i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "for i in range(df_full.shape[0]):\n",
